--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </header>
   <section class="nopad">
-    <div class="owl-carousel">
+    <div class="owl-carousel home_carousel">
       <div class="carousel_item">
         <img src="img/slide_01.jpg" alt="slide_01">
         <div class="carousel_text">
