--- a/products.html
+++ b/products.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Sixteen Clothing</title>
-  <link rel="stylesheet" href="css/layouts/nav.css">
+  <title>Products | Sixteen Clothing</title>
   <link rel="stylesheet" href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css">
   <link rel="stylesheet" href="css/layouts/products.css">
 </head>
